--- a/FsReveal.html
+++ b/FsReveal.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/reveal.css">
-    <link rel="stylesheet" href="css/theme/Sky.css" id="theme">
+    <link rel="stylesheet" href="css/theme/sky.css" id="theme">
     <link type="text/css" rel="stylesheet" href="fsharp.formatting/styles/style.css" />
     <link type="text/css" rel="stylesheet" href="fsharp.formatting/styles/deedle.css" />
     <link type="text/css" rel="stylesheet" href="css/custom.css" />
@@ -118,7 +118,7 @@
 
 </section>
 
-<section author="Karlkim Suwanmongkol" description="Introduction to FsReveal" theme="Sky" title="FsReveal" transition="default">
+<section author="Karlkim Suwanmongkol" description="Introduction to FsReveal" theme="sky" title="FsReveal" transition="default">
 
 <h4>More F#</h4>
 
@@ -133,7 +133,7 @@
 [&lt;<span onmouseout="hideTip(event, 'fs7', 10)" onmouseover="showTip(event, 'fs7', 10)" class="t">Measure</span>&gt;] <span class="k">type</span> <span onmouseout="hideTip(event, 'fs8', 11)" onmouseover="showTip(event, 'fs8', 11)" class="t">sqft</span>
 [&lt;<span onmouseout="hideTip(event, 'fs7', 12)" onmouseover="showTip(event, 'fs7', 12)" class="t">Measure</span>&gt;] <span class="k">type</span> <span onmouseout="hideTip(event, 'fs9', 13)" onmouseover="showTip(event, 'fs9', 13)" class="t">dollar</span>
 <span class="k">let</span> <span onmouseout="hideTip(event, 'fs10', 14)" onmouseover="showTip(event, 'fs10', 14)" class="i">sizes</span> <span class="o">=</span> [|<span class="n">1700</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs8', 15)" onmouseover="showTip(event, 'fs8', 15)" class="t">sqft</span><span class="o">&gt;</span>;<span class="n">2100</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs8', 16)" onmouseover="showTip(event, 'fs8', 16)" class="t">sqft</span><span class="o">&gt;</span>;<span class="n">1900</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs8', 17)" onmouseover="showTip(event, 'fs8', 17)" class="t">sqft</span><span class="o">&gt;</span>;<span class="n">1300</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs8', 18)" onmouseover="showTip(event, 'fs8', 18)" class="t">sqft</span>&gt;|]
-<span class="k">let</span> <span onmouseout="hideTip(event, 'fs11', 19)" onmouseover="showTip(event, 'fs11', 19)" class="i">prices</span> <span class="o">=</span> [|<span class="n">53000</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs9', 20)" onmouseover="showTip(event, 'fs9', 20)" class="t">dollar</span><span class="o">&gt;</span>;<span class="n">44000</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs9', 21)" onmouseover="showTip(event, 'fs9', 21)" class="t">dollar</span><span class="o">&gt;</span>;<span class="n">59000</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs9', 22)" onmouseover="showTip(event, 'fs9', 22)" class="t">dollar</span><span class="o">&gt;</span>;<span class="n">82000</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs9', 23)" onmouseover="showTip(event, 'fs9', 23)" class="t">dollar</span>&gt;|] 
+<span class="k">let</span> <span onmouseout="hideTip(event, 'fs11', 19)" onmouseover="showTip(event, 'fs11', 19)" class="i">prices</span> <span class="o">=</span> [|<span class="n">53000</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs9', 20)" onmouseover="showTip(event, 'fs9', 20)" class="t">dollar</span><span class="o">&gt;</span>;<span class="n">44000</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs9', 21)" onmouseover="showTip(event, 'fs9', 21)" class="t">dollar</span><span class="o">&gt;</span>;<span class="n">59000</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs9', 22)" onmouseover="showTip(event, 'fs9', 22)" class="t">dollar</span><span class="o">&gt;</span>;<span class="n">82000</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs9', 23)" onmouseover="showTip(event, 'fs9', 23)" class="t">dollar</span>&gt;|]
 </pre>
 </td>
 </tr>
@@ -145,7 +145,7 @@
 
 </section>
 
-<section author="Karlkim Suwanmongkol" description="Introduction to FsReveal" theme="Sky" title="FsReveal" transition="default">
+<section author="Karlkim Suwanmongkol" description="Introduction to FsReveal" theme="sky" title="FsReveal" transition="default">
 
 <h4>C#</h4>
 
@@ -163,7 +163,7 @@
 
 </section>
 
-<section author="Karlkim Suwanmongkol" description="Introduction to FsReveal" theme="Sky" title="FsReveal" transition="default">
+<section author="Karlkim Suwanmongkol" description="Introduction to FsReveal" theme="sky" title="FsReveal" transition="default">
 
 <h4>JavaScript</h4>
 
@@ -187,7 +187,7 @@
 
 </section>
 
-<section author="Karlkim Suwanmongkol" description="Introduction to FsReveal" theme="Sky" title="FsReveal" transition="default">
+<section author="Karlkim Suwanmongkol" description="Introduction to FsReveal" theme="sky" title="FsReveal" transition="default">
 
 <h4>Haskell</h4>
 
@@ -206,13 +206,13 @@ main <span class="prep">=</span> <span class="k">do</span>
 
 </section>
 
-<section author="Karlkim Suwanmongkol" description="Introduction to FsReveal" theme="Sky" title="FsReveal" transition="default">
+<section author="Karlkim Suwanmongkol" description="Introduction to FsReveal" theme="sky" title="FsReveal" transition="default">
 
 <h3>SQL</h3>
 
-<table class="pre"><tr><td><pre lang="sql"><span class="k">select</span> * 
-<span class="k">from</span> 
-  (<span class="k">select</span> 1 <span class="k">as</span> Id <span class="k">union</span> <span class="k">all</span> <span class="k">select</span> 2 <span class="k">union</span> <span class="k">all</span> <span class="k">select</span> 3) <span class="k">as</span> X 
+<table class="pre"><tr><td><pre lang="sql"><span class="k">select</span> *
+<span class="k">from</span>
+  (<span class="k">select</span> 1 <span class="k">as</span> Id <span class="k">union</span> <span class="k">all</span> <span class="k">select</span> 2 <span class="k">union</span> <span class="k">all</span> <span class="k">select</span> 3) <span class="k">as</span> X
 <span class="k">where</span> Id <span class="k">in</span> (@Ids1, @Ids2, @Ids3)
 </pre></td></tr></table>
 
